tests/errors/test_36.x
// Attempted reassignment of array

let mut x: i64[] = [1, 2, 3];

fn main() -> void {

    x = [2, 3, 4];

}